fix width overflow

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -58,7 +58,7 @@ h3 {
     font-size: 2.3rem;
   }
   h3 {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
   }
 }
 
@@ -70,7 +70,7 @@ h3 {
     font-size: 2rem;
   }
   h3 {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
   }
 }
 
